config file test 2

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "express": "~4.10.6",
     "socket.io": "~1.2.1",
-    "i2c": "~0.1.6"
+    "i2c": "~0.1.6",
+    "nconf":"~0.7.1"
   }
 }
